Add debug logging and update favicon tags in index.html
Added a debug script to log VITE_SUPABASE_URL and VITE_SUPABASE_KEY to troubleshoot the 'supabaseKey is required' error. Updated favicon tags to include apple-touch-icon, favicon-96x96.png, favicon.svg, favicon.ico, and site.webmanifest to ensure the 'O' logo displays correctly in browser tabs.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <meta name="apple-mobile-web-app-title" content="Optima AI" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,5 +60,9 @@
       <div class="initial-loader"></div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      console.log('VITE_SUPABASE_URL:', import.meta.env.VITE_SUPABASE_URL);
+      console.log('VITE_SUPABASE_KEY:', import.meta.env.VITE_SUPABASE_KEY);
+    </script>
   </body>
 </html>
