Fix debug script by adding type=module in index.html
Changed debug script to use type=module to resolve 'Cannot use import.meta outside a module' error and debug Supabase environment variables."
Select "Commit directly to the main branch.

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     <div id="root">
       <div class="initial-loader"></div>
     </div>
-    <script type="module" src="/src/main.tsx"></script>
-    <script>
-      console.log('VITE_SUPABASE_URL:', import.meta.env.VITE_SUPABASE_URL);
-      console.log('VITE_SUPABASE_KEY:', import.meta.env.VITE_SUPABASE_KEY);
-    </script>
-  </body>
+<script type="module" src="/src/main.tsx"></script>
+<script type="module">
+  console.log('VITE_SUPABASE_URL:', import.meta.env.VITE_SUPABASE_URL);
+  console.log('VITE_SUPABASE_KEY:', import.meta.env.VITE_SUPABASE_KEY);
+</script>
+</body>
 </html>
